Update project with complete documentation and rendered outputs
- Add comprehensive .gitignore excluding large files
- Include rendered HTML presentation and report
- Remove large Quarto .deb file
- Project ready for delivery and presentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /apresentacao_files/
 /relatorio_files/
 /venv/
+# Large files
+quarto-1.4.554-linux-amd64.deb
+*.deb
+# Cache and temp files
+__pycache__/
+*.pyc
+*.pyo
+.DS_Store
+.vscode/settings.json
